[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["macros"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["tokio", "full"] }
tower-http = { version = "0.4.0", features = ["full"] }
